# CMQ

./: AUTHORS  CMQ.cabal  LICENSE  README.md
examples/: demo_cmq_polymorphic_rcpt.hs  demo_cmq_polymorphic_sender.hs
examples/0.0.1/: demo_cmq_recipient.hs  demo_cmq_sender.hs
src/: cmq.hs
src/System/: CMQ.hs
